syntax = "proto3";

package authz;

option go_package = "github.com/Portfolio-Advanced-software/BingeBuster-AuthzServuce/authzpb";

service AuthzService {
    rpc VerifyRole(VerifyRoleRequest) returns (VerifyRoleResponse);
}

message VerifyRoleRequest {
    string user_id = 1;
    string role = 2;
}

message VerifyRoleResponse {
    bool is_authorized = 1;
}
